cleaning up vive interface

--- a/index.html
+++ b/index.html
@@ -1204,7 +1204,7 @@
                 <a href="#" class="seeMore closed" data-id="virtualReality"><span class="fui-triangle-down"></span>Virtual Reality:</a><a class="about floatRight" href="#" id="aboutVR"><span class="fui-question-circle"></span></a>
             </div>
             <div id="virtualReality" class="hide indent smallTxt">
-                Status: &nbsp;<span id="VRstatus"></span>
+                <b>Status:</b> &nbsp;<span id="VRstatus"></span>
                 <div id="VRoptions"><br/>
                     <a href="#" id="enterVR" class="displayBlock btn btn-lg btn-inverse"></a>
                 </div><br/><br/>
@@ -1294,7 +1294,10 @@
                 <p><b>VIRTUAL REALITY</b><br/><br/>
                 This tool currently supports an interactive Virtual Reality mode using the Vive headset and controllers.
                 For this to work, you must first use a <a href="https://webvr.info/" target="_blank">WebVR enabled browser</a>:
-                currently only <a href="https://webvr.rocks/firefox" target="_blank">Firefox Nightly</a> is supported by this app.
+                currently only <a href="https://webvr.rocks/firefox" target="_blank">the latest Firefox for Windows </a> and
+                    <a href="https://webvr.info/get-chrome/" target="_blank">an experimental build of Chromium (with enable-webvr and
+                        -enable-gamepad-extensions flags)</a> are supported by this app.  Note - in Chromium, you have to click the System button on the
+                    Vive controllers for them to start tracking.
                 <br/><br/>
                 When you open this page with the appropriate browser and a Vive connected through Steam VR, you will see a button that says "Enter VR".  Clicking this will
                 put the app into an interactive VR mode.  The hand controllers will allow you to grab the origami mesh and pull on it.
