--- a/index.html
+++ b/index.html
@@ -1295,17 +1295,17 @@
                 This tool currently supports an interactive Virtual Reality mode using the Vive headset and controllers.
                 For this to work, you must first use a <a href="https://webvr.info/" target="_blank">WebVR enabled browser</a>:
                 currently only <a href="https://webvr.rocks/firefox" target="_blank">the latest Firefox for Windows </a> and
-                    <a href="https://webvr.info/get-chrome/" target="_blank">an experimental build of Chromium (with enable-webvr and
-                        -enable-gamepad-extensions flags)</a> are supported by this app.  Note - in Chromium, you have to click the System button on the
+                    <a href="https://webvr.info/get-chrome/" target="_blank">an experimental build of Chromium</a> (with enable-webvr and
+                        -enable-gamepad-extensions flags) are supported by this app.  Note - in Chromium, you have to click the System button on the
                     Vive controllers for them to start tracking.
                 <br/><br/>
-                When you open this page with the appropriate browser and a Vive connected through Steam VR, you will see a button that says "Enter VR".  Clicking this will
+                    When you open this page with the appropriate browser and a Vive connected through Steam VR, you will see a button that says "<b>ENTER VR</b>".  Clicking this will
                 put the app into an interactive VR mode.  The hand controllers will allow you to grab the origami mesh and pull on it.
                 This is especially interesting if you set the <b>Mesh Material</b> to <b>Strain Visualization</b> so you can see how your interactions
                 change the internal strains in the material.
                 <br/><br/>
                 If the simulation looks choppy, consider lowering the <b>Num simulation steps per frame</b> setting under <b>Animation Settings</b> in the right hand menu.
-                  WebVR is changing rapidly, if you cannot connect be sure you have the latest browser version and install any firmware updates on headset, controllers, and trackers.
+                  WebVR is changing rapidly, if you cannot connect be sure you have the latest browser version and install any firmware updates on headset, controllers, and sensors.
                 <br/><br/>
                 VR mode currently does not support all the UI of the regular app, so you will need someone in the "outside world" to
                 help you load new files, change the fold percent, etc.
