--- a/index.html
+++ b/index.html
@@ -966,6 +966,12 @@
                             <li><a href="#" class="demo" data-url="SimpleFolds/brochurefold.svg">Brochure Fold</a></li>
                         </ul>
                     </li>
+                    <li class="dropdown-submenu">
+                        <a tabindex="-1">Bistable<span class="pull-right fui-arrow-right"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#" class="demo author" data-author="bistable" data-url="Bistable/curvedPleatSimple.svg">Curved Pleat</a></li>
+                        </ul>
+                    </li>
                     <li class="divider"></li>
                     <li class="dropdown-submenu">
                         <a tabindex="-1">Problematic Patterns<span class="pull-right fui-arrow-right"></span></a>
@@ -1739,6 +1745,10 @@
             an app by Shahul Alam,
             Lauren Huang,
             and Mahi Shafiullah that creates crease patterns for any 2D arrangement of voxels on a square grid.
+        </div>
+        <div id="bistable">
+            Allow this pattern to fold, then select <b>Allow User Interaction</b> (right menu) and drag the central vertex
+            to pop into into an alternate, inverted configuration.
         </div>
     </div>
 </div>
