--- a/index.html
+++ b/index.html
@@ -833,6 +833,10 @@
                     make good demo files, please send them to me (Amanda) so I can add them to the <b>Examples</b> menu.  My email address is on my website.  Thanks!<br/>
                     <br/>
                     More documentation coming soon.<br/>
+                    <br/>
+                    <b>What's Next:</b> (As of 9/8/17) I'm happy with the performance of the web app, but I'm working on some
+                    optimizations so that the simulation + rendering is more performant on VR.  I'm also working on
+                    adding some UI to VR and should be pushing updates to that in the next few weeks.<br/>
                 </p>
             </div>
         </div><!-- /.modal-content -->
