--- a/index.html
+++ b/index.html
@@ -754,6 +754,7 @@
     <script type="text/javascript" src="dependencies/VREffect.js"></script>
     <script type="text/javascript" src="dependencies/ViveController.js"></script>
     <script type="text/javascript" src="dependencies/VRControls.js"></script>
+    <script type="text/javascript" src="dependencies/VRController.js"></script>
 
     <script type="text/javascript" src="js/dynamic/GLBoilerplate.js"></script>
     <script type="text/javascript" src="js/dynamic/GPUMath.js"></script>
