--- a/index.html
+++ b/index.html
@@ -727,11 +727,11 @@
     <script type="text/javascript" src="dependencies/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="dependencies/jquery-ui.min.js"></script>
     <script type="text/javascript" src="dependencies/flat-ui.min.js"></script>
-    <script type="text/javascript" src="dependencies/three.js"></script>
+    <script type="text/javascript" src="dependencies/three.js"></script>//todo .min
     <script type="text/javascript" src="dependencies/binary_stl_writer.js"></script>
     <script type="text/javascript" src="dependencies/TrackballControls.js"></script>
-    <script type="text/javascript" src="dependencies/Projector.js"></script>
-    <script type="text/javascript" src="dependencies/SVGRenderer.js"></script>
+    <!--<script type="text/javascript" src="dependencies/Projector.js"></script>-->
+    <!--<script type="text/javascript" src="dependencies/SVGRenderer.js"></script>-->
     <script type="text/javascript" src="dependencies/underscore-min.js"></script>
     <script type="text/javascript" src="dependencies/FileSaver.min.js"></script>
     <script type="text/javascript" src="dependencies/SVGLoader.js"></script>
@@ -751,9 +751,9 @@
     <!--<script type="text/javascript" src="dependencies/RenderPass.js"></script>-->
 
     <script type="text/javascript" src="dependencies/WebVR.js"></script>
-    <script type="text/javascript" src="dependencies/VREffect.js"></script>
-    <script type="text/javascript" src="dependencies/ViveController.js"></script>
-    <script type="text/javascript" src="dependencies/VRControls.js"></script>
+    <!--<script type="text/javascript" src="dependencies/VREffect.js"></script>-->
+    <!--<script type="text/javascript" src="dependencies/ViveController.js"></script>-->
+    <!--<script type="text/javascript" src="dependencies/VRControls.js"></script>-->
     <script type="text/javascript" src="dependencies/VRController.js"></script>
 
     <script type="text/javascript" src="js/dynamic/GLBoilerplate.js"></script>
