--- a/index.html
+++ b/index.html
@@ -755,6 +755,7 @@
     <!--<script type="text/javascript" src="dependencies/ViveController.js"></script>-->
     <!--<script type="text/javascript" src="dependencies/VRControls.js"></script>-->
     <script type="text/javascript" src="dependencies/VRController.js"></script>
+    <script type="text/javascript" src="dependencies/datguivr.js"></script>
 
     <script type="text/javascript" src="js/dynamic/GLBoilerplate.js"></script>
     <script type="text/javascript" src="js/dynamic/GPUMath.js"></script>
