--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@
     <script type="text/javascript" src="dependencies/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="dependencies/jquery-ui.min.js"></script>
     <script type="text/javascript" src="dependencies/flat-ui.min.js"></script>
-    <script type="text/javascript" src="dependencies/three.js"></script>//todo .min
+    <script type="text/javascript" src="dependencies/three.js"></script><!--todo .min-->
     <script type="text/javascript" src="dependencies/binary_stl_writer.js"></script>
     <script type="text/javascript" src="dependencies/TrackballControls.js"></script>
     <!--<script type="text/javascript" src="dependencies/Projector.js"></script>-->
