--- a/index.html
+++ b/index.html
@@ -771,7 +771,7 @@
     <script type="text/javascript" src="js/saveSTL.js"></script>
     <script type="text/javascript" src="js/saveFOLD.js"></script>
     <script type="text/javascript" src="js/importer.js"></script>
-    <script type="text/javascript" src="js/ViveInterface.js"></script>
+    <script type="text/javascript" src="js/VRInterface.js"></script>
     <script type="text/javascript" src="js/videoAnimator.js"></script>
 
     <script type="text/javascript" src="js/main.js"></script>
