--- a/index.html
+++ b/index.html
@@ -836,8 +836,7 @@
                     More documentation coming soon.<br/>
                     <br/>
                     <b>What's Next:</b> (As of 9/8/17) I'm happy with the performance of the web app, but I'm working on some
-                    optimizations so that the simulation + rendering is more performant on VR.  I'm also working on
-                    adding some UI to VR and should be pushing updates to that in the next few weeks.  Some of these changes
+                    optimizations so that the simulation + rendering is more performant in VR.  Some of these changes
                     may break things that were previously working in the app, please let me know if you see any bugs.<br/>
                 </p>
             </div>
