--- a/index.html
+++ b/index.html
@@ -808,7 +808,7 @@
                         <li>Upload your own crease patterns in SVG or <a href="https://github.com/edemaine/fold" target="_blank">FOLD</a> formats, following <a href="#" class="goToImportInstructions">these instructions</a>.</li>
                         <li>Export FOLD files or 3D models ( STL or OBJ ) of the folded state of your design ( <b>File > Save Simulation as...</b> ).</li>
                         <li>Visualize the internal strain of the origami as it folds using the <b>Strain Visualization</b> in the left menu.</li>
-                        <li>If you are working from a computer connected to a Vive, follow <a href="#" id="goToViveInstructions">these instructions</a>
+                        <li>If you are working from a computer connected to a VR headset and hand controllers, follow <a href="#" id="goToViveInstructions">these instructions</a>
                             to use this app in an interactive virtual reality mode.</li>
                     </ul>
 
@@ -1303,23 +1303,22 @@
                   <span aria-hidden="true">&times;</span>
                 </button>
                 <p><b>VIRTUAL REALITY</b><br/><br/>
-                This tool currently supports an interactive Virtual Reality mode using the Vive headset and controllers.
+                This tool currently supports an interactive Virtual Reality mode for the Vive and Oculus headset and controllers (it may work on others, but it is not tested).
                 For this to work, you must first use a <a href="https://webvr.info/" target="_blank">WebVR enabled browser</a>:
                 currently only <a href="https://webvr.rocks/firefox" target="_blank">the latest Firefox for Windows </a> and
                     <a href="https://webvr.info/get-chrome/" target="_blank">an experimental build of Chromium</a> (with enable-webvr and
-                        -enable-gamepad-extensions flags) are supported by this app.  Note - in Chromium, you have to click the System button on the
-                    Vive controllers for them to start tracking.
+                        -enable-gamepad-extensions flags) are supported by this app.
                 <br/><br/>
-                    When you open this page with the appropriate browser and a Vive connected through Steam VR, you will see a button that says "<b>ENTER VR</b>".  Clicking this will
+                    When you open this page with the appropriate browser, you will see a button that says "<b>ENTER VR</b>".  Clicking this will
                 put the app into an interactive VR mode.  The hand controllers will allow you to grab the origami mesh and pull on it.
                 This is especially interesting if you set the <b>Mesh Material</b> to <b>Strain Visualization</b> so you can see how your interactions
                 change the internal strains in the material.
                 <br/><br/>
-                If the simulation looks choppy, consider lowering the <b>Num simulation steps per frame</b> setting under <b>Animation Settings</b> in the right hand menu.
-                  WebVR is changing rapidly, if you cannot connect be sure you have the latest browser version and install any firmware updates on headset, controllers, and sensors.
+                If the simulation looks choppy, consider lowering the <b>Num Steps Per Frame</b> setting.
+                  WebVR is changing rapidly, if you cannot connect be sure you have the latest browser version and install any firmware updates on your headset, controllers, and sensors.
                 <br/><br/>
                 VR mode currently does not support all the UI of the regular app, so you will need someone in the "outside world" to
-                help you load new files, change the fold percent, etc.
+                help you load new files.
                 </p>
             </div>
         </div><!-- /.modal-content -->
