--- a/index.html
+++ b/index.html
@@ -1305,9 +1305,9 @@
                 <p><b>VIRTUAL REALITY</b><br/><br/>
                 This tool currently supports an interactive Virtual Reality mode for the Vive and Oculus headset and controllers (it may work on others, but it is not tested).
                 For this to work, you must first use a <a href="https://webvr.info/" target="_blank">WebVR enabled browser</a>:
-                currently only <a href="https://webvr.rocks/firefox" target="_blank">the latest Firefox for Windows </a> and
-                    <a href="https://webvr.info/get-chrome/" target="_blank">an experimental build of Chromium</a> (with enable-webvr and
-                        -enable-gamepad-extensions flags) are supported by this app.
+                currently only <a href="https://webvr.info/get-chrome/" target="_blank">an experimental build of Chromium</a>(with enable-webvr and
+                        -enable-gamepad-extensions flags) and <a href="https://webvr.rocks/firefox" target="_blank">the latest Firefox for Windows </a>
+                      are supported by this app.  Currently, Chromium seems to be more performant in my setup.
                 <br/><br/>
                     When you open this page with the appropriate browser, you will see a button that says "<b>ENTER VR</b>".  Clicking this will
                 put the app into an interactive VR mode.  The hand controllers will allow you to grab the origami mesh and pull on it.
