--- a/index.html
+++ b/index.html
@@ -862,6 +862,7 @@
                     <li class="divider"></li>
                     <li><a id="createGif" href="#">Record animated GIF...</a></li>
                     <li><a id="createVideo" href="#">Record video...</a></li>
+                    <li><a id="createPNG" href="#">Save PNG screenshot...</a></li>
                     <li class="divider"></li>
                     <li><a id="exportFOLD" href="#">Save Simulation as FOLD...</a></li>
                     <li><a id="exportSTL" href="#">Save Simulation as STL...</a></li>
@@ -1763,11 +1764,15 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true">&times;</span>
                 </button>
-                <b><span class="video">SCREEN RECORDING</span><span class="gif">ANIMATED GIF</span></b><br/><br/>
-                <a href="#" id="setupAnimation" class="displayBlock btn btn-lg btn-default">Configure Fold Percent Animation</a>&nbsp;&nbsp;<span class="smallTxt" id="foldPercentAnimationStatus"></span><br/><br/>
+                <b><span class="video">SCREEN RECORDING</span>
+                    <span class="gif">ANIMATED GIF</span>
+                    <span class="png">SAVE PNG</span>
+                </b><br/><br/>
+                <span class="gif video"><a href="#" id="setupAnimation" class="displayBlock btn btn-lg btn-default">Configure Fold Percent Animation</a>&nbsp;&nbsp;<span class="smallTxt" id="foldPercentAnimationStatus"></span><br/><br/></span>
                 Filename: &nbsp;&nbsp;<input id="screenRecordFilename" value="" placeholder="" class="bigInput text form-control" type="text">
                     <span class="gif">.gif</span>
                     <span class="video">.webm</span>
+                    <span class="png">.png</span>
                 <br/><br/>
                 Scale: &nbsp;&nbsp;<input id="capturerScale" value="" placeholder="" class="float form-control" type="text"><br/><br/>
                 Dimensions: &nbsp;&nbsp;<b><span id="canvasDimensions"></span></b><br/>
@@ -1779,14 +1784,15 @@
                 <span class="gif">
                     Framerate ( 1-60 fps ): &nbsp;&nbsp;<input id="gifFPS" value="" placeholder="" class="float int form-control" type="text"><br/><br/>
                 </span>
-                Num simulation steps per frame: &nbsp;&nbsp;<input value="" placeholder="" class="numStepsPerRender int form-control" type="text"><br/><br/>
-                <span class="smallTxt">Notes: This feature records the output of the canvas only - no UI or cursor
-                    will be included.  Do not resize window while recording.  You can increase the
-                amount of motion per frame by increasing the "Num simulation steps per frame".  Check the <b>View</b> menu (above) for more rendering options.</span><br/>
+                <span class="gif video">Num simulation steps per frame: &nbsp;&nbsp;<input value="" placeholder="" class="numStepsPerRender int form-control" type="text"><br/><br/></span>
+                <span class="smallTxt">Notes: This feature captures the output of the canvas only - no UI or cursor
+                    will be included.<span class="gif video">  Do not resize window while recording.  You can increase the
+                amount of motion per frame by increasing the "Num simulation steps per frame".</span>  Check the <b>View</b> menu (above) for more rendering options.</span><br/>
             </div>
             <div class="modal-footer">
                 <button id="doGifRecord" type="button" class="gif actionButton btn btn-success" data-dismiss="modal">Start</button>
                 <button id="doScreenRecord" type="button" class="video actionButton btn btn-success" data-dismiss="modal">Start</button>
+                <button id="doPNGCapture" type="button" class="png actionButton btn btn-success" data-dismiss="modal">Save</button>
             </div>
         </div>
     </div>
