--- a/index.html
+++ b/index.html
@@ -1774,9 +1774,10 @@
                     <span class="video">.webm</span>
                     <span class="png">.png</span>
                 <br/><br/>
-                Scale: &nbsp;&nbsp;<input id="capturerScale" value="" placeholder="" class="float form-control" type="text"><br/><br/>
+                Scale: &nbsp;&nbsp;<input id="capturerScale" value="" placeholder="" class="float form-control" type="text"> <br/>
+                <span class="smallTxt">Increasing scale allows you to record at higher than screen resolution.</span><br/><br/>
                 Dimensions: &nbsp;&nbsp;<b><span id="canvasDimensions"></span></b><br/>
-                <span class="smallTxt">( resize browser window to change aspect ratio )</span><br/><br/>
+                <span class="smallTxt">Resize browser window to change aspect ratio.</span><br/><br/>
                 <span class="video">
                     Quality ( 0-63 ): &nbsp;&nbsp;<input id="capturerQuality" value="" placeholder="" class="float int form-control" type="text"><br/><br/>
                     Framerate ( 1-60 fps ): &nbsp;&nbsp;<input id="capturerFPS" value="" placeholder="" class="float int form-control" type="text"><br/><br/>
