--- a/index.html
+++ b/index.html
@@ -1462,8 +1462,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true">&times;</span>
                 </button>
-                <p id="warningMessage">
-                </p>
+                <p id="warningMessage"></p>
             </div>
         </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
