--- a/index.html
+++ b/index.html
@@ -1306,7 +1306,7 @@
                 <p><b>VIRTUAL REALITY</b><br/><br/>
                 This tool currently supports an interactive Virtual Reality mode for the Vive and Oculus headset and controllers (it may work on others, but it is not tested).
                 For this to work, you must first use a <a href="https://webvr.info/" target="_blank">WebVR enabled browser</a>:
-                currently only <a href="https://webvr.info/get-chrome/" target="_blank">an experimental build of Chromium</a>(with enable-webvr and
+                currently only <a href="https://webvr.info/get-chrome/" target="_blank">an experimental build of Chromium</a> (with enable-webvr and
                         -enable-gamepad-extensions flags) and <a href="https://webvr.rocks/firefox" target="_blank">the latest Firefox for Windows </a>
                       are supported by this app.  Currently, Chromium seems to be more performant in my setup.
                 <br/><br/>
@@ -1587,7 +1587,8 @@
                     <p><b>STRAIN VISUALIZATION</b><br/><br/>
                     <a href="https://en.wikipedia.org/wiki/Deformation_(mechanics)#Engineering_strain" target="_blank">
                         Cauchy strain or engineering strain</a> is a unitless measurement of how much a material is being stretched or compressed under load.
-                    The <b>Strain Visualization</b> illustrates the strain across an origami sheet by mapping it to a color from blue (no strain) to red (max strain).
+                    The <b>Strain Visualization</b> illustrates the strain across an origami sheet by mapping it to a color from blue (no strain) to red (max strain).<br/><br/>
+                    <img style="width: 100%;" src="strain.jpg" />
                 </p>
             </div>
         </div><!-- /.modal-content -->
