--- a/index.html
+++ b/index.html
@@ -1323,6 +1323,7 @@
                         then go to <b>Select > Same > Appearance</b> to select all similar lines in the pattern.
                         <li>Finally hit <b>Save As</b> and select <b>.svg</b> extension. I'm using the default SVG 1.1 settings, but version 1.0 will work as well.</li>
                     </ul>
+                <img style="width:100%" src="assets/doc/illustratorSaveOptions.jpg"/>
                 </p>
             </div>
         </div><!-- /.modal-content -->
