--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Origami Simulator</title>
 
+    <meta name="viewport" content="width=device-width">
+
     <link href="dependencies/bootstrap.min.css" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" type="text/css" href="dependencies/flat-ui.min.css"/>
     <link rel="stylesheet" type="text/css" href="dependencies/jquery-ui.min.css"/>
@@ -1856,5 +1858,6 @@
 <div id="recordStatus">
     <a href="#" id="stopRecord" class="btn btn-lg btn-danger">Stop Record <span></span></a>
 </div>
+<a href="#" id="aboutCorner">?</a>
 </body>
 </html>
