--- a/index.html
+++ b/index.html
@@ -1300,7 +1300,7 @@
                         </object>
                     <ul>
                         <li>Hinges (undriven creases) have <b style="color:magenta">magenta</b> stroke - rgb(255, 0, 255), hex #ff00ff -
-                        edges of this type will swing freely.</li>
+                        creases of this type will swing freely.</li>
                     </ul>
                         <object type="image/svg+xml" data="assets/doc/hinges.svg">
                           Your browser does not support SVG
@@ -1320,7 +1320,7 @@
                 I use Illustrator to create SVGs (though any vector editing program should be fine).  Here are some tips I've found for making svgs to import into this tool.<br/><br/>
                     <ul>
                         <li>If you are starting with a pre-made vector file, first ungroup any groups (<b>Select all + Object > Ungroup All</b>) and release all clipping masks (<b>Select all + Object > Clipping Mask > Release</b>).</li>
-                        <li>Create geometry using the <b>Line Segment Tool</b>.</li>
+                        <li>Create geometry using the <b>Line Segment</b>, <b>Rectangle</b>,  and <b>Polygon</b> tools.</li>
                         <li>Illustrator can help you select all lines of a particular type so that you can edit their color or opacity together.  Click the line,
                         then go to <b>Select > Same > Appearance</b> to select all similar lines in the pattern.
                         <li>Finally hit <b>Save As</b> and select <b>.svg</b> extension. I'm using the default SVG 1.1 settings, but version 1.0 will work as well.</li>
