--- a/index.html
+++ b/index.html
@@ -729,7 +729,7 @@
     <script type="text/javascript" src="dependencies/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="dependencies/jquery-ui.min.js"></script>
     <script type="text/javascript" src="dependencies/flat-ui.min.js"></script>
-    <script type="text/javascript" src="dependencies/three.js"></script><!--todo .min-->
+    <script type="text/javascript" src="dependencies/three.min.js"></script><!--todo .min-->
     <script type="text/javascript" src="dependencies/binary_stl_writer.js"></script>
     <script type="text/javascript" src="dependencies/TrackballControls.js"></script>
     <!--<script type="text/javascript" src="dependencies/Projector.js"></script>-->
@@ -754,7 +754,7 @@
 
     <script type="text/javascript" src="dependencies/WebVR.js"></script>
     <script type="text/javascript" src="dependencies/VRController.js"></script>
-    <script type="text/javascript" src="dependencies/datguivr.js"></script>
+    <script type="text/javascript" src="dependencies/datguivr.js"></script><!--made a lot of changes, don't replace with minified-->
 
     <script type="text/javascript" src="js/dynamic/GLBoilerplate.js"></script>
     <script type="text/javascript" src="js/dynamic/GPUMath.js"></script>
