svg import tips

--- a/index.html
+++ b/index.html
@@ -1237,7 +1237,7 @@
                 </button>
                 <p><b>FILE IMPORT TIPS</b><br/><br/>
                     Bad design files will throw errors and create models that explode or cannot be solved, here are some tips for
-                    importing FOLD or svg files that work.<br/><br/>
+                    importing FOLD or SVG files that work.<br/><br/>
                     <b>Importing FOLD:</b><br/><br/>
                     The FOLD file format is specified in <a target="_blank" href="https://github.com/edemaine/fold">these docs</a>.
                     This tool imports FOLD v1.0 files with <b>all</b> of the following fields populated:
@@ -1686,6 +1686,7 @@
                 </p>
             </div>
             <div class="modal-footer">
+                <div id="tipImportSVG" class="smallTxt">Having trouble?  See these <a class="goToImportInstructions" href="#">SVG Import Tips</a>.</div>
                 <button id="doSVGImport" type="button" class="actionButton btn btn-success" data-dismiss="modal">Import SVG</button>
             </div>
             </div>
