--- a/index.html
+++ b/index.html
@@ -1350,8 +1350,13 @@
                 This is especially interesting if you set the <b>Mesh Material</b> to <b>Strain Visualization</b> so you can see how your interactions
                 change the internal strains in the material.
                 <br/><br/>
-                If the simulation looks choppy, consider lowering the <b>Num Steps Per Frame</b> setting.
-                  WebVR is changing rapidly, if you cannot connect be sure you have the latest browser version and install any firmware updates on your headset, controllers, and sensors.
+                    <b>Troubleshooting</b>:<br/>
+                <ul>
+                    <li>If the simulation looks choppy, consider lowering the <b>Num Steps Per Frame</b> setting.</li>
+                    <li>The origami should load up in the center of your playspace.  If things load way off in the distance, you may need to reboot your headset and controllers and refresh this app.  I do this through SteamVR.</li>
+                    <li>If you hand controllers are not appearing, try clicking the System Button (Vive) to get them to wake up.  If you still have trouble connecting, try refreshing this app.</li>
+                    <li>WebVR is changing rapidly, if you cannot connect be sure you have the latest browser version and install any firmware updates on your headset, controllers, and sensors.</li>
+            </ul>
                 </p>
             </div>
         </div><!-- /.modal-content -->
