--- a/index.html
+++ b/index.html
@@ -800,6 +800,10 @@
                     &nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="http://www.tsg.ne.jp/TT/cg/TachiFreeformOrigami2010.pdf">Freeform Variations of Origami</a> by Tomohiro Tachi<br/>
                     <br/>
                     All simulation methods were written from scratch and are executed in parallel in several GPU fragment shaders for fast performance.
+                    <br/>
+                    Built by <a href="http://www.amandaghassaei.com/" target="_blank">Amanda Ghassaei</a> as a final project for <a href="http://courses.csail.mit.edu/6.849/spring17/" target="_blank">Geometric Folding Algorithms</a>.
+                    Code available on <a href="https://github.com/amandaghassaei/OrigamiSimulator" target="_blank">Github</a>.  If you have interesting crease patterns that would
+                    make good demo files, please send them to me (Amanda) so I can add them to the <b>Examples</b> menu.  My email address is on my website.  Thanks!<br/>
                 </p><br/>
                     <b>Instructions:</b><br/><br/>
                     <img style="width: 100%; max-width:600px" src="demoui.gif" /><br/>
@@ -839,11 +843,7 @@
                     </ul>
                 <p>
                     <br/>
-                    Built by <a href="http://www.amandaghassaei.com/" target="_blank">Amanda Ghassaei</a> as a final project for <a href="http://courses.csail.mit.edu/6.849/spring17/" target="_blank">Geometric Folding Algorithms</a>.
-                    Code available on <a href="https://github.com/amandaghassaei/OrigamiSimulator" target="_blank">Github</a>.  If you have interesting crease patterns that would
-                    make good demo files, please send them to me (Amanda) so I can add them to the <b>Examples</b> menu.  My email address is on my website.  Thanks!<br/>
-                    <br/>
-                    More documentation coming soon - I'm preparing a paper about the simulation methods used here, I will post it once its ready.
+                    More documentation coming soon - I'm preparing a paper about the simulation methods used here, I will post it once it's ready.
                     For now, find some additional info <a href="http://www.amandaghassaei.com/projects/origami_simulator/" target="_blank">here</a>.<br/>
                     <br/>
                 </p>
