--- a/index.html
+++ b/index.html
@@ -790,7 +790,7 @@
                 <p>
                 <b>ORIGAMI SIMULATOR</b><br/>
 
-                    <img style="width: 100%; max-width:500px" src="crane.gif" />
+                    <img style="width: 100%; max-width:500px" src="assets/doc/crane.gif" />
 
                     This app allows you to simulate how any origami crease pattern will fold.  It may look a little different
                     from what you typically think of as "origami" - rather than folding paper in a set of sequential steps,
@@ -806,7 +806,7 @@
                     make good demo files, please send them to me (Amanda) so I can add them to the <b>Examples</b> menu.  My email address is on my website.  Thanks!<br/>
                 </p><br/>
                     <b>Instructions:</b><br/><br/>
-                    <img style="width: 100%; max-width:600px" src="demoui.gif" /><br/>
+                    <img style="width: 100%; max-width:600px" src="assets/doc/demoui.gif" /><br/>
 
                     <ul>
                         <li>Slide the <b>Fold Percent</b> slider to control the degree of folding of the pattern (100% is fully folded, 0% is unfolded,
@@ -816,11 +816,11 @@
                         <li>Upload your own crease patterns in SVG or <a href="https://github.com/edemaine/fold" target="_blank">FOLD</a> formats, following <a href="#" class="goToImportInstructions">these instructions</a>.</li>
                         <li>Export FOLD files or 3D models ( STL or OBJ ) of the folded state of your design ( <b>File > Save Simulation as...</b> ).</li>
                     </ul>
-                        <img style="width: 100%;" src="strain.jpg" />
+                        <img style="width: 100%;" src="assets/doc/strain.jpg" />
                     <ul>
                         <li>Visualize the internal strain of the origami as it folds using the <b>Strain Visualization</b> in the left menu.</li>
                     </ul>
-                        <img style="width: 100%; max-width:600px" src="huffmanvr.jpg" /><br/>
+                        <img style="width: 100%; max-width:600px" src="assets/doc/huffmanvr.jpg" /><br/>
                     <ul>
                         <li>If you are working from a computer connected to a VR headset and hand controllers, follow <a href="#" id="goToViveInstructions">these instructions</a>
                             to use this app in an interactive virtual reality mode.</li>
@@ -854,8 +854,8 @@
 <nav id="globalNav" class="navbar navbar-inverse navbar-embossed" role="navigation">
     <div class="navbar-header">
         <a id="logo" class="navbar-brand" target="_blank" href="http://cba.mit.edu/">
-            <img id="inactiveLogo" src="logo.png"/>
-            <img id="activeLogo" src="logo-active.png"/>
+            <img id="inactiveLogo" src="assets/logo.png"/>
+            <img id="activeLogo" src="assets/logo-active.png"/>
         </a>
     </div>
     <div class="collapse navbar-collapse" id="navbar-collapse-01">
