--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@
     <script type="text/javascript" src="dependencies/earcut.js"></script>
     <script type="text/javascript" src="dependencies/fold.js"></script>
     <script type="text/javascript" src="dependencies/CCapture.all.min.js"></script>
-    <!--<script type="text/javascript" src="dependencies/numeric-1.2.6.js"></script>-->
+    <script type="text/javascript" src="dependencies/numeric-1.2.6.js"></script>
 
     <!--<script type="text/javascript" src="dependencies/EffectComposer.js"></script>-->
     <!--<script type="text/javascript" src="dependencies/MaskPass.js"></script>-->
@@ -837,6 +837,8 @@
                         <li>Arbitrary polygonal faces of imported geometry are triangulated using the <a target="_blank" href="https://github.com/mapbox/earcut">Earcut Library</a></li>
                         <li>Portability to multiple VR controllers by <a target="_blank" href="https://github.com/stewdio/THREE.VRController">THREE.VRController.js</a></li>
                         <li>VR GUI by <a href="https://github.com/dataarts/dat.guiVR" target="_blank">dat.guiVR</a></li>
+                        <li><a href="http://www.numericjs.com/" target="_blank">numeric.js</a> for linear algebra operations</li>
+                        <li><a href="https://github.com/eligrey/FileSaver.js/" target="_blank">FileSaver</a> for client-side file saving</li>
                         <li>GIF and WebM video export uses <a target="_blank" href="https://github.com/spite/ccapture.js/">CCapture</a></li>
                         <li><a target="_blank" href="https://jquery.com/">jQuery</a>, <a target="_blank" href="http://getbootstrap.com/">Bootstrap</a>, and the
                             <a target="_blank" href="http://designmodo.github.io/Flat-UI/">Flat UI theme</a> used to build the regular GUI</li>
