sep pattern importer and pattern viewer

--- a/index.html
+++ b/index.html
@@ -769,7 +769,8 @@
     <script type="text/javascript" src="js/staticSolver.js"></script>
     <script type="text/javascript" src="js/dynamic/dynamicSolver.js"></script>
     <script type="text/javascript" src="js/rigidSolver.js"></script>
-    <script type="text/javascript" src="js/pattern.js"></script>
+    <script type="text/javascript" src="js/PatternImporter.js"></script>
+    <script type="text/javascript" src="js/PatternViewer2D.js"></script>
     <script type="text/javascript" src="js/saveSTL.js"></script>
     <script type="text/javascript" src="js/saveFOLD.js"></script>
     <script type="text/javascript" src="js/importer.js"></script>
