--- a/index.html
+++ b/index.html
@@ -773,7 +773,7 @@
     <script type="text/javascript" src="js/PatternViewer2D.js"></script>
     <script type="text/javascript" src="js/saveSTL.js"></script>
     <script type="text/javascript" src="js/saveFOLD.js"></script>
-    <script type="text/javascript" src="js/importer.js"></script>
+    <script type="text/javascript" src="js/FileImporter.js"></script>
     <script type="text/javascript" src="js/VRInterface.js"></script>
     <script type="text/javascript" src="js/videoAnimator.js"></script>
 
