--- a/index.html
+++ b/index.html
@@ -1696,7 +1696,7 @@
                   <span aria-hidden="true">&times;</span>
                 </button>
                 <p><b>SVG IMPORT SETTINGS</b><br/><br/>
-                    Vertex merge tolerance (px) : &nbsp;&nbsp;<input id="vertTol" value="" placeholder="" class="float form-control" type="text">
+                    Vertex merge tolerance (px) : &nbsp;&nbsp;<input id="vertexTol" value="" placeholder="" class="float form-control" type="text">
                     <div class="smallTxt">Vertices within this px tolerance in the SVG will be merged into one.  It is recommended to keep this number above zero.</div>
                 </p>
             </div>
