--- a/index.html
+++ b/index.html
@@ -765,7 +765,7 @@
     <script type="text/javascript" src="js/node.js"></script>
     <script type="text/javascript" src="js/beam.js"></script>
     <script type="text/javascript" src="js/crease.js"></script>
-    <script type="text/javascript" src="js/model.js"></script>
+    <script type="text/javascript" src="js/Model3D.js"></script>
     <script type="text/javascript" src="js/3dUI.js"></script>
     <script type="text/javascript" src="js/staticSolver.js"></script>
     <script type="text/javascript" src="js/dynamic/dynamicSolver.js"></script>
