starting new project

--- a/index.html
+++ b/index.html
@@ -729,7 +729,7 @@
     <script type="text/javascript" src="dependencies/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="dependencies/jquery-ui.min.js"></script>
     <script type="text/javascript" src="dependencies/flat-ui.min.js"></script>
-    <script type="text/javascript" src="dependencies/three.min.js"></script><!--todo .min-->
+    <script type="text/javascript" src="dependencies/three.min.js"></script>
     <script type="text/javascript" src="dependencies/binary_stl_writer.js"></script>
     <script type="text/javascript" src="dependencies/TrackballControls.js"></script>
     <!--<script type="text/javascript" src="dependencies/Projector.js"></script>-->
@@ -759,7 +759,7 @@
     <script type="text/javascript" src="js/dynamic/GLBoilerplate.js"></script>
     <script type="text/javascript" src="js/dynamic/GPUMath.js"></script>
     <script type="text/javascript" src="js/controls.js"></script>
-    <script type="text/javascript" src="js/threeView.js"></script>
+    <script type="text/javascript" src="js/ThreeView.js"></script>
     <script type="text/javascript" src="js/Animator.js"></script>
     <script type="text/javascript" src="js/globals.js"></script>
     <script type="text/javascript" src="js/node.js"></script>
@@ -767,9 +767,9 @@
     <script type="text/javascript" src="js/crease.js"></script>
     <script type="text/javascript" src="js/Model3D.js"></script>
     <script type="text/javascript" src="js/3dUI.js"></script>
-    <script type="text/javascript" src="js/staticSolver.js"></script>
-    <script type="text/javascript" src="js/dynamic/dynamicSolver.js"></script>
-    <script type="text/javascript" src="js/rigidSolver.js"></script>
+    <!--<script type="text/javascript" src="js/staticSolver.js"></script>-->
+    <script type="text/javascript" src="js/dynamic/DynamicSolver.js"></script>
+    <!--<script type="text/javascript" src="js/rigidSolver.js"></script>-->
     <script type="text/javascript" src="js/PatternImporter.js"></script>
     <script type="text/javascript" src="js/PatternViewer2D.js"></script>
     <script type="text/javascript" src="js/saveSTL.js"></script>
